# picpic

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.omm/command-surface/: description.md  diagram.mmd  meta.yaml
.omm/command-surface/all-cmd/: description.md  meta.yaml
.omm/command-surface/analyze-cmd/: description.md  meta.yaml
.omm/command-surface/categories-cmd/: description.md  meta.yaml
.omm/command-surface/rules-cmd/: description.md  meta.yaml
.omm/command-surface/scan-cmd/: description.md  meta.yaml
.omm/command-surface/serve-cmd/: description.md  meta.yaml
.omm/data-flow/: constraint.md  description.md  diagram.mmd  meta.yaml
.omm/data-flow/analyze-node/: description.md  meta.yaml
.omm/data-flow/cli-entry/: description.md  meta.yaml
.omm/data-flow/fs/: description.md  meta.yaml
.omm/data-flow/huggingface/: description.md  meta.yaml
.omm/data-flow/rules-node/: description.md  meta.yaml
.omm/data-flow/scan-node/: description.md  meta.yaml
.omm/overall-architecture/: constraint.md  description.md  diagram.mmd  meta.yaml
.omm/pipeline/: concern.md  description.md  diagram.mmd  meta.yaml
docs/: architecture.md
src/picpic/: categories.py  cli.py  db.py  rules.py  scan.py  thumbs.py  trash.py
tests/: conftest.py  test_analyze_runner.py  test_blur.py  test_categories.py  test_cli.py  test_cli_categories.py  test_clip_integration.py  test_clip_pass.py  test_db.py  test_exif.py  test_hashes.py  test_rules.py  test_scan.py  test_similar.py  test_thumbs.py  test_trash.py  test_web.py  test_web_labels.py
(+74 files in other folders)
